--- a/login/index.html
+++ b/login/index.html
@@ -40,12 +40,12 @@
 						<img src="images/avatar-01.jpg" alt="AVATAR">
 					</span> -->
 
-					<div class="wrap-input100 validate-input m-t-85 m-b-35" data-validate = "Enter username">
+					<div class="wrap-input100 validate-input m-t-85 m-b-35" data-validate = "아이디를 입력하세요">
 						<input class="input100" type="text" name="username">
 						<span class="focus-input100" data-placeholder="USER ID"></span>
 					</div>
 
-					<div class="wrap-input100 validate-input m-b-50" data-validate="Enter password">
+					<div class="wrap-input100 validate-input m-b-50" data-validate="비밀번호를 입력하세요">
 						<input class="input100" type="password" name="pass">
 						<span class="focus-input100" data-placeholder="PASSWORD"></span>
 					</div>
